# SENTIO

./: .colcon_ignore  .env.example  .eslintrc.json  .gitignore  CI_README.md  CONTRIBUTING.md  CodeStatistics.txt  DEVELOPER_SETUP.md  LICENSE.md  ONBOARDING.md  README.md  cleanup.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: README.md  ci.yml  firmware-builds.yml  release.yml  ui-builds.yml
aether/: __init__.py
aether/config/: fusion_config.yaml  fusion_weights.yaml
aether/explainability/: __init__.py  decision_logger.py  explaination_formatter.py  reasoning_trail.py
aether/fusion/: __init__.py  fuse_affect.py  fusion_engine.py  weighting_strategy.py
aether/inference/: __init__.py  model_manifest.py
ci/: Dockerfile  README.md  docker-compose.yml  test-runner.sh
ci/github-actions/: ros-builds.yml
docs/: ARCHITECTURE.md  Makefile  SECURITY.md
hardware/: BOM.csv  README.md  assembly_guide.md  power_management.md
hardware/electrical/: e_stop_wiring.txt  safety_checklist.md
sentio/firmware/esp32_servo_bridge/: README.md  platformio.ini
sentio/firmware/esp32_servo_bridge/lib/: PCA9685.h  README.md
sentio/firmware/esp32_servo_bridge/src/: main.cpp
sentio/ros2_ws/src/sentio_core/: package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_core/resource/: sentio_core
sentio/ros2_ws/src/sentio_core/sentio_core/: __init__.py  main.py
sentio/ros2_ws/src/sentio_demo/: README.md  package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_demo/choreography/: README.md  greet_sequence.yaml  nod_sequence.yaml  showcase_full.yaml
sentio/ros2_ws/src/sentio_demo/config/: demo_config.yaml
sentio/ros2_ws/src/sentio_demo/examples/: curl_trigger_demo.sh  rosbridge_trigger_demo.py
sentio/ros2_ws/src/sentio_demo/launch/: demo_launch.py
sentio/ros2_ws/src/sentio_demo/resource/: sentio_demo
sentio/ros2_ws/src/sentio_demo/sentio_demo/: __init__.py  choreography_engine.py  demo_controller.py  demo_runner.py  logging_utils.py  sequence_parser.py
sentio/ros2_ws/src/sentio_demo/tests/: __init__.py  test_choreography_engine.py  test_sequence_parser.py
sentio/ros2_ws/src/sentio_drivers/: package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_drivers/config/: camera_config.yaml  imu_config.yaml  maxsonar_config.yaml  tfmini_config.yaml
sentio/ros2_ws/src/sentio_drivers/launch/: all_driver_launch.py  camera_launch.py  imu_launch.py  maxsonar_launch.py  tfmini_launch.py
sentio/ros2_ws/src/sentio_drivers/resource/: sentio_drivers
sentio/ros2_ws/src/sentio_drivers/sentio_drivers/: __init__.py  device_manager.py  imu_node.py  maxsonar_node.py  tfmini_node.py  utils.py  uvc_camera_node.py
sentio/ros2_ws/src/sentio_drivers/udev_rules/: 99-sentio.rules
sentio/ros2_ws/src/sentio_fusion/: package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_fusion/config/: fusion_node_config.yaml
sentio/ros2_ws/src/sentio_fusion/launch/: fusion_launch.py
sentio/ros2_ws/src/sentio_fusion/sentio_fusion/: __init__.py  fusion_node.py
sentio/ros2_ws/src/sentio_motion/: README.md  package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_motion/config/: kinematics.yaml  safety_limits.yaml  servo_map.yaml
sentio/ros2_ws/src/sentio_motion/launch/: motion_launch.py
sentio/ros2_ws/src/sentio_motion/sentio_motion/: __init__.py  kinematics_engine.py  logging_utils.py  motion_controller.py  safety_monitor.py  serial_interface.py  servo_bridge.py  servo_command.py
sentio/ros2_ws/src/sentio_motion/tests/: __init__.py  test_kinematics.py  test_safety.py
sentio/ros2_ws/src/sentio_msgs/: CMakeLists.txt  package.xml
sentio/ros2_ws/src/sentio_msgs/msg/: Affect.msg
sentio/ros2_ws/src/sentio_perception/: package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_perception/config/: audio_emotion_config.yaml  face_emotion_config.yaml  group_detector_config.yaml
sentio/ros2_ws/src/sentio_perception/launch/: all_perception_launch.py  audio_emotion_launch.py  face_emotion_launch.py  group_detector_launch.py
sentio/ros2_ws/src/sentio_perception/resource/: sentio_perception
sentio/ros2_ws/src/sentio_perception/sentio_perception/: __init__.py  audio_emotion_node.py  audio_processor.py  emotion_utils.py  face_emotion_node.py  group_detector_node.py  model_loader.py
sentio/ros2_ws/src/sentio_policy/: package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_policy/config/: behavior_thresholds.yaml  default_policy.yaml  policy_profiles.yaml
sentio/ros2_ws/src/sentio_policy/launch/: policy_launch.py
sentio/ros2_ws/src/sentio_policy/schema/: behavior_schema.json
sentio/ros2_ws/src/sentio_policy/sentio_policy/: __init__.py  behavior_mapper.py  logging_utils.py  policy_engine.py  rule_evaluator.py  validators.py
sentio/ros2_ws/src/sentio_policy/tests/: __init__.py  test_behavior_mapper.py  test_rule_evaluater.py  test_validators.py
sentio/ros2_ws/src/sentio_tts_bridge/: package.xml  setup.cfg  setup.py
sentio/ros2_ws/src/sentio_tts_bridge/config/: tts_config.yaml
sentio/ros2_ws/src/sentio_tts_bridge/launch/: tts_bridge_launch.py
sentio/ros2_ws/src/sentio_tts_bridge/resource/: sentio_tts_bridge
sentio/ros2_ws/src/sentio_tts_bridge/sentio_tts_bridge/: __init__.py  audio_manager.py  main.py  piper_client.py  voice_config.py
tools/: hardware_hil_test.py  host_start_piper.sh  host_stop_piper.sh  install_piper.sh  run_demo.py  servo_sweep_test.py  simulate_servo_backend.py
ui/: .env.example  .eslintignore  .eslintrc.json  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/src/__tests__/: example.test.tsx  rosbridge.test.ts
ui/src/__tests__/components/: EmotionVisualizer.test.tsx
ui/src/app/: global.css  globals.css  layout.tsx  page.tsx
ui/src/app/components/: CameraFeed.tsx  ConnectionStatus.tsx  DashboardLayout.tsx  DemoController.tsx  EmotionVisualizer.tsx  ManualControl.tsx  ReasoningTrail.tsx  SystemStatus.tsx  TopicList.tsx
ui/src/hooks/: useROSBridge.ts  useServices.ts  useTopicSubscription.ts
ui/src/lib/: rosbridge.ts  types.ts  utils.ts
