[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentio"
version = "0.1.0"
description = "SENTIO Robot - AI-Powered Emotional Expression System"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["sentio_ros2_ws/src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
