# Setup Configuration

[metadata]
name = sentio
version = 0.1.0

[options]
python_requires = >=3.10
include_package_data = True

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv,build,dist,install
ignore = E203,W503,E501
per-file-ignores =
    __init__.py:F401

[coverage:run]
source = sentio_ros2_ws
omit =
    */test*
    */install/*
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[tool:pytest]
testpaths = sentio_ros2_ws/src
python_files = test_*.py *_test.py
