<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentio_core</name>
  <version>0.1.0</version>
  <description>SENTIO Core ROS 2 Package</description>
  
  <maintainer email="dev@devsora.tech">DevSora</maintainer>
  <license>Proprietary</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <test_depend>pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
