<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentio_fusion</name>
  <version>0.1.0</version>
  <description>AETHER multimodal fusion node for SENTIO</description>
  
  <maintainer email="dev@devsora.tech">DevSora Deep-Tech Research</maintainer>
  <license>Proprietary</license>
  
  <author email="dev@devsora.tech">DevSora Team</author>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sentio_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
